--- a/app/views/main/main.html.erb
+++ b/app/views/main/main.html.erb
@@ -18,7 +18,7 @@
 
                 <p>I work as <code class="prettyprint">Software Engineer</code> and write code on <code class="prettyprint">Swift</code>, mainly building an iOS applications</p>
 
-                <p>I also use <a href="https://rubyonrails.org" rel="nofollow" target="_blank">Ruby On Rails</a> framework for my <a href="/projects" rel="nofollow" target="_blank">own projects</a></p>
+                <p>I also use <a href="https://rubyonrails.org" rel="nofollow" target="_blank">Ruby On Rails</a> framework for my <a href="/projects.html" rel="nofollow" target="_blank">own projects</a></p>
 
                 <p>Feel free to ask me any questions and follow me on <a href="https://www.instagram.com/yurii.voievodin" rel="nofollow" target="_blank">social media</a></p>
             </div>
