--- a/app/views/pages/bootstrap_timeline.html.erb
+++ b/app/views/pages/bootstrap_timeline.html.erb
@@ -19,7 +19,7 @@
             <p>Made on clear <code>HTML</code> with <a href="https://getbootstrap.com" target="_blank">Bootstrap 5</a></p>
             <div class="my-3">
                 <a href="/bootstrap_5_timeline.zip" rel="nofollow" class="btn btn-primary mt-2"><i class="bi bi-arrow-down-circle"></i> Download example</a>
-                <a href="/pages/tesla_timeline" rel="nofollow" class="btn btn-success mt-2">Live demo</a>
+                <a href="/pages/tesla_timeline.html" rel="nofollow" class="btn btn-success mt-2">Live demo</a>
             </div>
             <div class="py-3"></div>
             <hr>
