--- a/app/views/pages/tesla_timeline.html.erb
+++ b/app/views/pages/tesla_timeline.html.erb
@@ -1,7 +1,7 @@
 <div class="col-8 mx-auto py-md-5">
 
     <div class="row">
-        <div class="my-3"><a href="/pages/bootstrap_5_timeline" class="btn btn-outline-primary"><i class="bi bi-arrow-left"></i> Return to article</a></div>
+        <div class="my-3"><a href="/pages/bootstrap_5_timeline.html" class="btn btn-outline-primary"><i class="bi bi-arrow-left"></i> Return to article</a></div>
     </div>
 
     <div class="row fs-5">
@@ -128,7 +128,7 @@
         </div>
 
         <div class="row">
-            <div class="my-3"><a href="/pages/bootstrap_5_timeline" class="btn btn-outline-primary"><i class="bi bi-arrow-left"></i> Return to article</a></div>
+            <div class="my-3"><a href="/pages/bootstrap_5_timeline.html" class="btn btn-outline-primary"><i class="bi bi-arrow-left"></i> Return to article</a></div>
         </div>
 
     </div>
