--- a/app/views/ua/blog/blog.html.erb
+++ b/app/views/ua/blog/blog.html.erb
@@ -8,11 +8,11 @@
         <ul class="list-unstyled">
             <li>
               <i class="bi bi-arrow-right-circle text-muted"></i>
-              <a href="/ua/blog/low-data-mode">Як оптимізувати використання мобільного Інтернет</a>
+              <a href="/ua/blog/low-data-mode.html">Як оптимізувати використання мобільного Інтернет</a>
           </li>
           <li>
               <i class="bi bi-arrow-right-circle text-muted"></i>
-              <a href="/ua/blog/feature">Привіт із майбутнього!</a>
+              <a href="/ua/blog/feature.html">Привіт із майбутнього!</a>
           </li>
       </ul>
   </div>
