--- a/app/views/ua/blog/low-data-mode.html.erb
+++ b/app/views/ua/blog/low-data-mode.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <header class="d-flex justify-content-center py-3">
     <ul class="nav nav-pills">
-        <%= link_to "/ua", rel: 'nofollow', class: "nav-link" do %>
+        <%= link_to "/ua.html", rel: 'nofollow', class: "nav-link" do %>
         <i class="bi bi-house-fill"></i>
         <% end %>
     </ul>
