--- a/app/views/ua/index.html.erb
+++ b/app/views/ua/index.html.erb
@@ -16,7 +16,7 @@
 
                 <p>Я займаюся <code class="prettyprint">розробкою програмного забезпечення</code> та пишу код мовою програмування <code class="prettyprint">Swift</code>, в основному створюю додатки для iOS</p>
 
-                <p>Також я використовую фреймворк <a href="https://rubyonrails.org" rel="nofollow" target="_blank">Ruby On Rails</a> для <a href="/projects" rel="nofollow" target="_blank">власних проєктів</a></p>
+                <p>Також я використовую фреймворк <a href="https://rubyonrails.org" rel="nofollow" target="_blank">Ruby On Rails</a> для <a href="/projects.html" rel="nofollow" target="_blank">власних проєктів</a></p>
             </div>
         </div>
     </div>
