--- a/app/views/main/timeline.html.erb
+++ b/app/views/main/timeline.html.erb
@@ -6,7 +6,7 @@
 <div class="col-9 mx-auto py-md-3">
 
     <div class="text-end">
-        <%= link_to "Timeline source code", "pages/bootstrap_5_timeline", class: "link-secondary", target: "_blank" %>
+        <%= link_to "Timeline source code", "pages/bootstrap_5_timeline.html", class: "link-secondary", target: "_blank" %>
     </div>
 
     <div class="py-2 mb-4">
