--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,6 @@
 <footer class="pt-5 my-5 text-muted">
-	2019-2023
+	<ul class="list-unstyled text-small">
+		<li>2019-2023</li>
+		<li><a href="/ua.html">UA</a></li>
+	</ul>
 </footer>
