--- a/app/views/main/projects.html.erb
+++ b/app/views/main/projects.html.erb
@@ -31,7 +31,7 @@
             <h4>Personal  website</h4>
 
             <ul class="list-unstyled">
-                <li><a href="https://voevodin-yura.com" rel="nofollow" target="_blank">voevodin-yura.com</a> - website on <a href="https://rubyonrails.org" rel="nofollow" target="_blank">Rails</a> framework and <a href="https://getbootstrap.com" rel="nofollow" target="_blank">Bootstrap</a> toolkit <a href="https://github.com/yura-voevodin/blog-rails" rel="nofollow" target="_blank"><i class="bi bi-github"></i></a></li>
+                <li><a href="https://yura-voevodin.github.io" rel="nofollow" target="_blank">yura-voevodin.github.io</a> - website on <a href="https://rubyonrails.org" rel="nofollow" target="_blank">Rails</a> framework and <a href="https://getbootstrap.com" rel="nofollow" target="_blank">Bootstrap</a> toolkit <a href="https://github.com/yura-voevodin/blog-rails" rel="nofollow" target="_blank"><i class="bi bi-github"></i></a></li>
             </ul>
         </div>
     </div>
@@ -46,7 +46,7 @@
             <h4>Photographer portfolio</h4>
 
             <ul class="list-unstyled">
-                <li><a href="https://myphotoblog.herokuapp.com" rel="nofollow" target="_blank">myphotoblog.herokuapp.com</a> - website on <a href="https://rubyonrails.org" rel="nofollow" target="_blank">Rails</a> framework and <a href="https://getbootstrap.com" rel="nofollow" target="_blank">Bootstrap</a> toolkit <a href="https://github.com/yura-voevodin/photoblog" rel="nofollow" target="_blank"><i class="bi bi-github"></i></a></li>
+                <li>Website on <a href="https://rubyonrails.org" rel="nofollow" target="_blank">Rails</a> framework and <a href="https://getbootstrap.com" rel="nofollow" target="_blank">Bootstrap</a> toolkit <a href="https://github.com/yura-voevodin/photoblog" rel="nofollow" target="_blank"><i class="bi bi-github"></i></a></li>
             </ul>
         </div>
     </div>
