Add a Posts page

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,6 +6,7 @@
             <% end %>
             <li class="nav-item"><%= link_to "Timeline", "timeline.html", class: "nav-link #{ is_active('timeline')}" %></li>
             <li class="nav-item"><%= link_to "Personal", "personal.html", class: "nav-link #{ is_active('personal')}" %></li>
+            <li class="nav-item"><%= link_to "Posts", "posts.html", class: "nav-link" %></li>
         </ul>
     </header>
 </div>
