--- a/app/views/pages/bootstrap_timeline.html.erb
+++ b/app/views/pages/bootstrap_timeline.html.erb
@@ -1,14 +1,6 @@
 <% meta_tag :description, "Bootstrap 5 HTML Timeline" %>
 <% meta_tag :keywords, "Timeline, Bootstrap 5, HTML, CSS, Rails 7" %>
-<div class="container">
-  <header class="d-flex justify-content-center py-3">
-    <ul class="nav nav-pills">
-        <%= link_to "/", rel: 'nofollow', class: "nav-link" do %>
-        <i class="bi bi-house-fill"></i>
-        <% end %>
-    </ul>
-</header>
-</div>
+<%= render "layouts/header_small" %>
 
 <div class="col-8 mx-auto py-md-5">
 
