--- a/app/views/posts/markdown.html.erb
+++ b/app/views/posts/markdown.html.erb
@@ -1,13 +1,4 @@
-<div class="container">
-      <header class="d-flex justify-content-center py-3">
-        <ul class="nav nav-pills">
-            <%= link_to "/", rel: 'nofollow', class: "nav-link" do %>
-                <i class="bi bi-house-fill"></i>
-            <% end %>
-        </ul>
-    </header>
-</div>
-
+<%= render "layouts/header_small" %>
 
 <div class="col-11 mx-auto p-3 py-md-5">
 
