Add code example to of Timeline

--- a/app/views/pages/bootstrap_timeline.html.erb
+++ b/app/views/pages/bootstrap_timeline.html.erb
@@ -30,7 +30,7 @@
 
     <div class="row mt-5">
         <div class="fs-3">Code example</div>
-        <div class="mt-2"><img src="<%= image_path('bootstrap_timeline/Code_example.png') %>" class="img-fluid rounded"/></div>
+        <%= markdown(@code_example) %>
     </div>
 
     <%= render "layouts/footer" %>
