Add dates to posts

--- a/app/views/pages/bootstrap_timeline.html.erb
+++ b/app/views/pages/bootstrap_timeline.html.erb
@@ -7,6 +7,8 @@
     <div class="row fs-5">
         <div class="col-md-6">
             <h1>Bootstrap 5 + Timeline</h1>
+            <span class="text-muted">February 7, 2022</span>
+            <p></p>
             <p>This example contains implementation of popular "timeline" feature.</p>
             <p>Made on clear <code>HTML</code> with <a href="https://getbootstrap.com" target="_blank">Bootstrap 5</a></p>
             <div class="my-3">
