--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,10 +8,12 @@
             <li>
               <i class="bi bi-arrow-right-circle text-muted"></i>
               <a href="/posts/rails-static-pages.html">Ruby on Rails static site generator</a>
+              <span class="text-muted">June 17, 2023</span>
           </li>
           <li>
               <i class="bi bi-arrow-right-circle text-muted"></i>
               <a href="/pages/bootstrap_5_timeline.html">Bootstrap 5 + Timeline</a>
+              <span class="text-muted">February 7, 2022</span>
           </li>
       </ul>
   </div>
