--- a/app/views/ua/blog/blog.html.erb
+++ b/app/views/ua/blog/blog.html.erb
@@ -9,10 +9,12 @@
             <li>
               <i class="bi bi-arrow-right-circle text-muted"></i>
               <a href="/ua/blog/low-data-mode.html">Як оптимізувати використання мобільного Інтернет</a>
+              <span class="text-muted">11 грудня, 2022 року</span>
           </li>
           <li>
               <i class="bi bi-arrow-right-circle text-muted"></i>
               <a href="/ua/blog/feature.html">Привіт із майбутнього!</a>
+              <span class="text-muted">6 квітня, 2021 року</span>
           </li>
       </ul>
   </div>
