--- a/app/views/main/main.html.erb
+++ b/app/views/main/main.html.erb
@@ -7,7 +7,7 @@
 
     <div class="row fs-5 p-3 rounded-3 bg-primary-subtle">
         <div class="col-sm-3 mt-3">
-            <%= image_tag 'blue square.jpeg', class: "img-thumbnail border border-0", alt: "Yura Voevodin" %>
+            <%= image_tag 'new.jpeg', class: "img-thumbnail border border-0", alt: "Yura Voevodin" %>
         </div>
 
         <div class="col">
