Update Projects page with more details

--- a/app/views/main/projects.html.erb
+++ b/app/views/main/projects.html.erb
@@ -16,8 +16,20 @@
 
             <ul class="list-unstyled">
                 <li class="mb-2"><a href="https://my-university.com.ua" rel="nofollow" target="_blank">my-university.com.ua</a> - web service and API on <a href="https://rubyonrails.org" rel="nofollow" target="_blank">Rails</a> framework</li>
-                <li class="mb-2"><a href="https://itunes.apple.com/ua/app/university-schedule/id1440425058" rel="nofollow" target="_blank">iOS app</a> with schedule for universities</li>
+                <li class="mb-2"><a href="https://itunes.apple.com/ua/app/university-schedule/id1440425058" rel="nofollow" target="_blank">iOS app</a> with schedule for universities <a href="https://github.com/university-my/ios" rel="nofollow" target="_blank"><i class="bi bi-github"></i></a></li>
             </ul>
+
+            <p>
+                <i>Technical info:</i>
+                <ul>
+                    <li>App is written in <code>Swift</code> programming language</li>
+                    <li>User interface created with <code>Storyboards</code> and <code>SwiftUI</code></li>
+                    <li><b>MVC</b> and <b>MVVM</b> architecture (with Dependency Injection)</li>
+                    <li><code>URLSession</code> for network requests to <b>REST API</b></li>
+                    <li><code>CoreData</code> as offline storage</li>
+                    <li><a href="https://rubyonrails.org" rel="nofollow" target="_blank">Ruby On Rails</a> as backend</li>
+                </ul>
+            </p>
         </div>
     </div>
 
@@ -28,10 +40,10 @@
         </div>
 
         <div class="col">
-            <h4>Personal  website</h4>
+            <h4>Personal website <a href="https://github.com/yura-voevodin/blog-rails" rel="nofollow" target="_blank"><i class="bi bi-github"></i></a></h4>
 
             <ul class="list-unstyled">
-                <li><a href="https://yura-voevodin.github.io" rel="nofollow" target="_blank">yura-voevodin.github.io</a> - website on <a href="https://rubyonrails.org" rel="nofollow" target="_blank">Rails</a> framework and <a href="https://getbootstrap.com" rel="nofollow" target="_blank">Bootstrap</a> toolkit <a href="https://github.com/yura-voevodin/blog-rails" rel="nofollow" target="_blank"><i class="bi bi-github"></i></a></li>
+                <li><a href="https://yura-voevodin.github.io" rel="nofollow" target="_blank">yura-voevodin.github.io</a> - website on <a href="https://rubyonrails.org" rel="nofollow" target="_blank">Rails</a> framework and <a href="https://getbootstrap.com" rel="nofollow" target="_blank">Bootstrap</a> toolkit</li>
             </ul>
         </div>
     </div>
@@ -43,10 +55,25 @@
         </div>
 
         <div class="col">
-            <h4>Photographer portfolio</h4>
+            <h4>Photographer portfolio <a href="https://github.com/yura-voevodin/photoblog" rel="nofollow" target="_blank"><i class="bi bi-github"></i></a></h4>
 
             <ul class="list-unstyled">
-                <li>Website on <a href="https://rubyonrails.org" rel="nofollow" target="_blank">Rails</a> framework and <a href="https://getbootstrap.com" rel="nofollow" target="_blank">Bootstrap</a> toolkit <a href="https://github.com/yura-voevodin/photoblog" rel="nofollow" target="_blank"><i class="bi bi-github"></i></a></li>
+                <li>Website on <a href="https://rubyonrails.org" rel="nofollow" target="_blank">Rails</a> framework and <a href="https://getbootstrap.com" rel="nofollow" target="_blank">Bootstrap</a> toolkit</li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="row fs-5 p-3 mt-5 bg-dark-subtle rounded-3">
+
+        <div class="col-sm-5">
+            <%= image_tag 'svitlo.png', class: "img-fluid" %>
+        </div>
+
+        <div class="col">
+            <h4>Power outage website <a href="https://github.com/yura-voevodin/svitlo" rel="nofollow" target="_blank"><i class="bi bi-github"></i></a></h4>
+
+            <ul class="list-unstyled">
+                <li>Website on <a href="https://rubyonrails.org" rel="nofollow" target="_blank">Rails</a> framework and <a href="https://getbootstrap.com" rel="nofollow" target="_blank">Bootstrap</a> toolkit</li>
             </ul>
         </div>
     </div>
