--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="msapplication-TileColor" content="#da532c">
-  <meta name="description" content="<%= yield_meta_tag(:description, 'Yura Voevodin Personal Website') %>" />
+  <meta name="description" content="<%= yield_meta_tag(:description, 'Yurii Voievodin Personal Website') %>" />
   <meta name="keywords" content="<%= yield_meta_tag(:keywords, 'iOS,iPadOS,macOS,tvOS,iPhone,iPad,iMac,MacBook,Developer,Swift') %>" />
 
   <!-- For new browsers - multisize ico  -->
