--- a/app/views/main/personal.html.erb
+++ b/app/views/main/personal.html.erb
@@ -1,6 +1,6 @@
 <% meta_tag :description, "Software Engineer (iOS, Swift) / Father from Ukraine" %>
 <% meta_tag :keywords, "iOS, Developer, Engineer, Blog, Ukraine" %>
-<% @title = "Yura Voevodin - Personal" %>
+<% @title = "Yurii Voievodin - Personal" %>
 <%= render "layouts/header" %>
 
 <div class="col-9 mx-auto py-md-5">
