--- a/app/views/main/projects.html.erb
+++ b/app/views/main/projects.html.erb
@@ -1,6 +1,6 @@
 <% meta_tag :description, "Software Engineer (iOS, Swift) / Father from Ukraine" %>
 <% meta_tag :keywords, "iOS, Developer, Engineer, Blog, Ukraine" %>
-<% @title = "Yura Voevodin - Projects" %>
+<% @title = "Yurii Voievodin - Projects" %>
 <%= render "layouts/header" %>
 
 <div class="col-9 mx-auto py-md-5">
@@ -40,10 +40,10 @@
         </div>
 
         <div class="col">
-            <h4>Personal website <a href="https://github.com/yura-voevodin/blog-rails" rel="nofollow" target="_blank"><i class="bi bi-github"></i></a></h4>
+            <h4>Personal website <a href="https://github.com/yurii-voievodin/blog-rails" rel="nofollow" target="_blank"><i class="bi bi-github"></i></a></h4>
 
             <ul class="list-unstyled">
-                <li><a href="https://yura-voevodin.github.io" rel="nofollow" target="_blank">yura-voevodin.github.io</a> - website on <a href="https://rubyonrails.org" rel="nofollow" target="_blank">Rails</a> framework and <a href="https://getbootstrap.com" rel="nofollow" target="_blank">Bootstrap</a> toolkit</li>
+                <li><a href="https://yurii-voievodin.github.io" rel="nofollow" target="_blank">yurii-voievodin.github.io</a> - website on <a href="https://rubyonrails.org" rel="nofollow" target="_blank">Rails</a> framework and <a href="https://getbootstrap.com" rel="nofollow" target="_blank">Bootstrap</a> toolkit</li>
             </ul>
         </div>
     </div>
@@ -55,7 +55,7 @@
         </div>
 
         <div class="col">
-            <h4>Photographer portfolio <a href="https://github.com/yura-voevodin/photoblog" rel="nofollow" target="_blank"><i class="bi bi-github"></i></a></h4>
+            <h4>Photographer portfolio <a href="https://github.com/yurii-voievodin/photoblog" rel="nofollow" target="_blank"><i class="bi bi-github"></i></a></h4>
 
             <ul class="list-unstyled">
                 <li>Website on <a href="https://rubyonrails.org" rel="nofollow" target="_blank">Rails</a> framework and <a href="https://getbootstrap.com" rel="nofollow" target="_blank">Bootstrap</a> toolkit</li>
@@ -70,7 +70,7 @@
         </div>
 
         <div class="col">
-            <h4>Power outage website <a href="https://github.com/yura-voevodin/svitlo" rel="nofollow" target="_blank"><i class="bi bi-github"></i></a></h4>
+            <h4>Power outage website <a href="https://github.com/yurii-voievodin/svitlo" rel="nofollow" target="_blank"><i class="bi bi-github"></i></a></h4>
 
             <ul class="list-unstyled">
                 <li>Website on <a href="https://rubyonrails.org" rel="nofollow" target="_blank">Rails</a> framework and <a href="https://getbootstrap.com" rel="nofollow" target="_blank">Bootstrap</a> toolkit</li>
