--- a/app/views/main/main.html.erb
+++ b/app/views/main/main.html.erb
@@ -1,18 +1,18 @@
 <% meta_tag :description, "Software Engineer (iOS, Swift) / Father from Ukraine" %>
 <% meta_tag :keywords, "iOS, Developer, Engineer, Blog, Ukraine" %>
-<% @title = "Yura Voevodin" %>
+<% @title = "Yurii Voievodin" %>
 <%= render "layouts/header" %>
 
 <div class="col-9 mx-auto py-md-5">
 
     <div class="row fs-5 p-3 rounded-3 bg-primary-subtle">
         <div class="col-sm-3 mt-3">
-            <%= image_tag 'new.jpeg', class: "img-thumbnail border border-0", alt: "Yura Voevodin" %>
+            <%= image_tag 'new.jpeg', class: "img-thumbnail border border-0", alt: "Yurii Voievodin" %>
         </div>
 
         <div class="col">
             <div class="container-fluid py-3 px-3">
-                <h4>Hi! I'm Yura Voevodin, from Ukraine 🇺🇦</h4>
+                <h4>Hi! I'm Yurii Voievodin, from Ukraine 🇺🇦</h4>
 
                 <p>I have many years of programming experience, bachelor's degree in Computer Science</p>
 
