--- a/app/views/main/projects.html.erb
+++ b/app/views/main/projects.html.erb
@@ -15,8 +15,8 @@
             <h4>My University</h4>
 
             <ul class="list-unstyled">
-                <li class="mb-2"><a href="https://my-university.com.ua" rel="nofollow" target="_blank">my-university.com.ua</a> - web service and API on <a href="https://rubyonrails.org" rel="nofollow" target="_blank">Rails</a> framework</li>
-                <li class="mb-2"><a href="https://itunes.apple.com/ua/app/university-schedule/id1440425058" rel="nofollow" target="_blank">iOS app</a> with schedule for universities <a href="https://github.com/university-my/ios" rel="nofollow" target="_blank"><i class="bi bi-github"></i></a></li>
+                <li class="mb-2"><a href="https://university-my.github.io" rel="nofollow" target="_blank">university-my.github.io</a> - web service and API on <a href="https://rubyonrails.org" rel="nofollow" target="_blank">Rails</a> framework</li>
+                <li class="mb-2"><a href="https://github.com/university-my/ios" rel="nofollow" target="_blank">iOS app</a> with schedule for universities</li>
             </ul>
 
             <p>
