--- a/app/views/main/projects.html.erb
+++ b/app/views/main/projects.html.erb
@@ -1,4 +1,4 @@
-<% meta_tag :description, "Software Engineer (iOS, Swift) / Father from Ukraine" %>
+<% meta_tag :description, "Software Engineer (iOS, Swift) from Ukraine" %>
 <% meta_tag :keywords, "iOS, Developer, Engineer, Blog, Ukraine" %>
 <% @title = "Yurii Voievodin - Projects" %>
 <%= render "layouts/header" %>
