Timelime and photos update

--- a/app/views/layouts/_experience.html.erb
+++ b/app/views/layouts/_experience.html.erb
@@ -4,7 +4,7 @@
     <dl class="row mt-3">
 
         <dt class="col-sm-3">2022 - now</dt>
-        <dd class="col-sm-9"><span class="text-secondary-emphasis">Software Engineer (iOS, Swift) at <a href="https://create.vista.com" rel="nofollow" target="_blank" class="link-info">VistaCreate</a></span>
+        <dd class="col-sm-9"><span class="text-secondary-emphasis">Software Engineer (iOS, Swift) at <a href="https://www.vistaprint.com" rel="nofollow" target="_blank" class="link-info">VistaPrint</a> (and <a href="https://create.vista.com" rel="nofollow" target="_blank" class="link-info">VistaCreate</a>)</span>
             <div class="fs-6 fw-light mt-2 px-3">
                 <i>Role and responsibilities:</i>
                 <ul class="fs-6 fw-light">
