--- a/app/views/main/main.html.erb
+++ b/app/views/main/main.html.erb
@@ -20,7 +20,7 @@
 
                 <p>I also use <a href="https://rubyonrails.org" rel="nofollow" target="_blank">Ruby On Rails</a> framework for my <a href="/projects.html" rel="nofollow" target="_blank">own projects</a></p>
 
-                <p>Feel free to ask me any questions and follow me on <a href="https://www.instagram.com/yurii.voievodin" rel="nofollow" target="_blank">social media</a></p>
+                <p>Feel free to ask me any questions and follow me on <a href="https://www.instagram.com/yurii.voievodin" rel="nofollow" target="_blank">social</a></p>
             </div>
         </div>
     </div>
