Add Land Rover photos page

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -15,6 +15,11 @@
               <a href="/pages/bootstrap_5_timeline.html">Bootstrap 5 + Timeline</a>
               <span class="text-muted">February 7, 2022</span>
           </li>
+          <li>
+              <i class="bi bi-arrow-right-circle text-muted"></i>
+              <a href="/posts/land-rover-photos.html">Land Rover Discovery Sport 2017 Photos</a>
+              <span class="text-muted">May 15, 2025</span>
+          </li>
       </ul>
   </div>
 </div>
